
add_library(KDpp STATIC
	Resources/XMLResourceParser.h
	Resources/ResourceSet.cpp
	Resources/Resource.h
	Resources/ArchiveReader.h
	Resources/ResourceManager.h
	Resources/Resource.cpp
	Resources/ResourceSet.h
	Resources/ResourceManager.cpp
	Resources/ArchiveManager.cpp
	Resources/ArchiveManager.h
	Resources/XMLResourceParser.cpp
	Resources/GlobalResourceSet.h
	Resources/GlobalResourceSet.cpp
	Tools/Textfile.h
	Tools/XMLConfig.cpp
	Tools/Textfile.cpp
	Tools/Logfile.cpp
	Tools/XMLConfig.h
	Tools/defines.h
	Tools/FilePath.h
	Tools/FilePath.cpp
	Tools/Logfile.h
	Tools/XMLParser.h
	Tools/XMLParser.cpp
	Video/DisplayableInstance.h
	Video/ImageInstance.cpp
	Video/SdlImage.cpp
	Video/Font.h
	Video/Font.cpp
	Video/OglImage.h
	Video/Display.h
	Video/Color.cpp
	Video/Display.cpp
	Video/Sprite.h
	Video/Image.h
	Video/SpriteInstance.cpp
	Video/XMLSpriteParser.cpp
	Video/SDL_rotozoom.h
	Video/SDL_rotozoom.cpp
	Video/Color.h
	Video/SdlImage.h
	Video/ImageInstance.h
	Video/Image.cpp
	Video/DisplayableInstance.cpp
	Video/OglImage.cpp
	Video/Sprite.cpp
	Video/DisplayableResource.h
	Video/DisplayableResource.cpp
	Video/SpriteInstance.h
	Video/XMLSpriteParser.h
	Video/Events
	Video/Events/FountainEvent.cpp
	Video/Events/DisplayableEvent.h
	Video/Events/MovableEvent.cpp
	Video/Events/DisplayableEvent.cpp
	Video/Events/SpriteEvent.cpp
	Video/Events/MovableEvent.h
	Video/Events/TextEvent.h
	Video/Events/FountainEvent.h
	Video/Events/TextEvent.cpp
	Video/Events/SpriteEvent.h
	Sound/SoundSystem.h
	Sound/Sound.h
	Sound/Music.cpp
	Sound/SoundSystem.cpp
	Sound/Music.h
	Sound/Sound.cpp
	Controller/Controller.cpp
	Controller/Application.h
	Controller/Event.h
	Controller/Controller.h
	Controller/EventManager.h
	Controller/EventManager.cpp
	Controller/Event.cpp
	Controller/WidgetController.h
	Controller/WidgetController.cpp
	Controller/UserInterface
	Controller/UserInterface/KeyboardCursor.h
	Controller/UserInterface/Keyboard.cpp
	Controller/UserInterface/Widget.cpp
	Controller/UserInterface/Keyboard.h
	Controller/UserInterface/Frame.h
	Controller/UserInterface/Mouse.h
	Controller/UserInterface/Mouse.cpp
	Controller/UserInterface/EditField.cpp
	Controller/UserInterface/WidgetContainer.h
	Controller/UserInterface/EditField.h
	Controller/UserInterface/CheckBox.cpp
	Controller/UserInterface/StaticText.cpp
	Controller/UserInterface/Frame.cpp
	Controller/UserInterface/StaticText.h
	Controller/UserInterface/Button.cpp
	Controller/UserInterface/Button.h
	Controller/UserInterface/Widget.h
	Controller/UserInterface/CheckBox.h
	Controller/UserInterface/KeyboardCursor.cpp
	Controller/UserInterface/WidgetContainer.cpp
	Controller/Application.cpp)
target_include_directories(KDpp PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

target_link_libraries(KDpp PRIVATE
	#SDL2::SDL2 SDL2_mixer::SDL2_mixer SDL2_image::SDL2_image SDL2_ttf::SDL2_ttf
	SDL ZLIB::ZLIB)
target_link_libraries(KDpp PUBLIC LibXml2::LibXml2)
